--- a/package.json
+++ b/package.json
@@ -41,9 +41,9 @@
     "postcss-pxtorem": "^3.3.1",
     "postcss-rtl": "^0.5.0",
     "postcss-sorting": "^2.0.1",
-    "stylelint": "^7.8.0",
-    "stylelint-order": "^0.3.0",
-    "stylelint-scss": "^1.4.1",
+    "stylelint": "~8.0.0",
+    "stylelint-order": "~0.3.0",
+    "stylelint-scss": "~1.4.1",
     "xo": "0.18.2"
   },
   "dependencies": {
