update css property orders and include css grid

--- a/.stylelintrc
+++ b/.stylelintrc
@@ -5,6 +5,7 @@
 	],
 	"ignoreFiles": [
 		"./src/scss/generic/_normalize.scss",
+		"./dist/assets/css/*.css",
 		"./src/scss/settings/*.scss",
 		"./docs/**.md",
 		"./docs/documentation/*.html"
@@ -229,8 +230,6 @@
 				"line-height",
 				"text-align",
 				"text-align-last",
-				"vertical-align",
-				"white-space",
 				"text-decoration",
 				"text-emphasis",
 				"text-emphasis-color",
@@ -238,9 +237,6 @@
 				"text-emphasis-position",
 				"text-indent",
 				"text-justify",
-				"letter-spacing",
-				"word-spacing",
-				"writing-mode",
 				"text-outline",
 				"text-transform",
 				"text-size-adjust",
@@ -248,8 +244,13 @@
 				"text-overflow",
 				"text-overflow-ellipsis",
 				"text-overflow-mode",
+				"vertical-align",
+				"white-space",
+				"letter-spacing",
+				"word-spacing",
 				"word-wrap",
 				"word-break",
+				"writing-mode",
 				"tab-size",
 				"hyphens",
 
@@ -266,7 +267,6 @@
 				"background-size",
 				"interpolation-mode",
 				"filter",
-
 				"border",
 				"border-width",
 				"border-style",
@@ -338,6 +338,24 @@
 				"flex-grow",
 				"flex-shrink",
 				"flex-wrap",
+				"grid",
+				"grid-area",
+				"grid-auto-columns",
+				"grid-auto-flow",
+				"grid-auto-rows",
+				"grid-column",
+				"grid-column-start",
+				"grid-column-gap",
+				"grid-column-end",
+				"grid-gap",
+				"grid-row",
+				"grid-row-start",
+				"grid-row-gap",
+				"grid-row-end",
+				"grid-template",
+				"grid-template-areas",
+				"grid-template-columns",
+				"grid-template-rows",
 				"justify-content",
 				"align-items",
 				"align-self",
