--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,35 +1,36 @@
 {
     "cSpell.words": [
+        "Cpath",
+        "Csvg",
         "Gazit",
+        "Git's",
+        "ITCSS",
         "Idan",
+        "Miday",
         "Neue",
+        "OOCSS",
+        "PHPBB",
+        "SMACSS",
         "abcdefghijklmnopqrstuvwxyz",
         "architected",
+        "atrule",
+        "docsify",
         "francona",
+        "hanakin",
+        "helvetica",
+        "invisibles",
         "jsfiddle",
+        "midaym",
+        "necolas",
+        "octo",
+        "octocat",
         "pxtorem",
         "rgba",
         "rque",
         "stlyelintrc",
         "stylefmt",
-        "ITCSS",
-        "PHPBB",
-        "Miday",
-        "midaym",
-        "hanakin",
-        "SMACSS",
-        "invisibles",
-        "necolas",
-        "helvetica",
-        "OOCSS",
         "svg",
         "svgs",
-        "Cpath",
-        "Csvg",
-        "Git's",
-        "octo",
-        "octocat",
-        "atrule",
-        "docsify"
+        "unspaced"
     ]
 }
