update vscode settings

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,36 +1,39 @@
 {
     "cSpell.words": [
-        "Cpath",
-        "Csvg",
-        "Gazit",
-        "Git's",
-        "ITCSS",
-        "Idan",
-        "Miday",
-        "Neue",
-        "OOCSS",
-        "PHPBB",
-        "SMACSS",
         "abcdefghijklmnopqrstuvwxyz",
         "architected",
         "atrule",
+        "Cpath",
+        "Csvg",
         "docsify",
         "francona",
+        "Gazit",
+        "Git's",
         "hanakin",
         "helvetica",
+        "Idan",
         "invisibles",
+        "ITCSS",
         "jsfiddle",
+        "Miday",
         "midaym",
         "necolas",
+        "Neue",
         "octo",
         "octocat",
+        "OOCSS",
+        "paren",
+        "PHPBB",
         "pxtorem",
         "rgba",
         "rque",
+        "SMACSS",
         "stlyelintrc",
         "stylefmt",
+        "stylelintrc",
         "svg",
         "svgs",
+        "torem",
         "unspaced"
     ]
 }
