--- a/package.json
+++ b/package.json
@@ -58,7 +58,23 @@
 		"ios >= 12.4"
 	],
 	"scripts": {
-		"test": "eslint all/js/ && gulp test && stylelint --config ./.stylelintrc './**/*.scss' && colorguard './**/*.css'"
+		"css-compile": "sass --style expanded --source-map --embed-sources --no-error-css src/scss/:dist/css/",
+		"css-postcss": "postcss --config build/postcss.config.js --replace \"dist/css/*.css\" \"!dist/css/*.min*\" \"!dist/css/*.css.map\"",
+		"css-fix": "stylelint --fix \"dist/css/*.css\" \"!dist/css/*.min.css\" \"!dist/css/*.css.map\" --cache --cache-location .cache/.stylelintcsscache",
+		"css-minify": "cleancss -O1 --format breakWith=lf --with-rebase --source-map --source-map-inline-sources --output dist/css/ --batch --batch-suffix \".min\" \"dist/css/*.css\" \"!dist/css/*.min.css\" \"!dist/css/*.css.map\"",
+		"clean": "node build/clean.js",
+		"docs-compile": "sass --style expanded --source-map --embed-sources --no-error-css docs/_media/:docs/_media",
+		"docs-postcss": "postcss --config build/postcss.config.js --replace \"docs/_media/*.css\" \"!docs/_media/*.min*\" \"!docs/_media/*.css.map\"",
+		"docs-fix": "stylelint --fix \"docs/_media/*.css\" \"!docs/_media/*.min.css\" \"!docs/_media/*.css.map\" --cache --cache-location .cache/.stylelintdocscache",
+		"docs-minify": "cleancss -O1 --format breakWith=lf --with-rebase --source-map --source-map-inline-sources --output docs/_media --batch --batch-suffix \".min\" \"docs/_media/*.css\" \"!docs/_media/*.min.css\" \"!docs/_media/*.css.map\"",
+		"eslint": "eslint --cache --cache-location .cache/.eslintcache --report-unused-disable-directives .",
+		"scss-lint": "stylelint \"**/*.scss\" --config \".stylelintrc\" --cache --cache-location .cache/.stylelintscsscache",
+		"css": "npm-run-all --continue-on-error css-compile css-postcss css-fix css-minify",
+		"docs": "npm-run-all --continue-on-error docs-compile docs-postcss docs-fix docs-minify",
+		"build": "npm-run-all --parallel css docs",
+		"watch": "npm-run-all --parallel watch-*",
+		"watch-css": "nodemon --watch src/scss/ --ext scss --exec \"npm-run-all css-compile css-postcss css-fix css-minify\"",
+		"watch-docs": "nodemon --watch docs/_media/ --ext scss --exec \"npm-run-all docs-compile docs-postcss docs-fix docs-minify\""
 	},
 	"repository": {
 		"type": "git",
@@ -71,27 +87,23 @@
 	},
 	"homepage": "https://github.com/hanakin/base-l#readme",
 	"devDependencies": {
-		"autoprefixer": "^10.2.5",
-		"chromatic-sass": "^0.1.8",
-		"colorguard": "^1.2.1",
-		"cssnano": "^5.0.2",
+		"autoprefixer": "^10.4.4",
+		"clean-css-cli": "^5.6.0",
 		"del": "^6.0.0",
-		"eslint": "^7.26.0",
-		"eslint-config-xo": "^0.36.0",
-		"gulp": "^4.0.2",
-		"gulp-data": "^1.3.1",
-		"gulp-postcss": "^9.0.0",
-		"gulp-rename": "^2.0.0",
-		"gulp-sass": "^4.1.0",
-		"gulp-sourcemaps": "^3.0.0",
-		"htmlhint": "^0.14.2",
-		"node-sass": "^4.14.1",
+		"eslint": "^8.12.0",
+		"eslint-config-xo": "^0.40.0",
+		"htmlhint": "^1.1.3",
+		"nodemon": "^2.0.15",
+		"npm-run-all": "^4.1.5",
+		"postcss": "^8.4.12",
+		"postcss-cli": "^9.1.0",
 		"postcss-pxtorem": "^6.0.0",
-		"postcss-sorting": "^6.0.0",
-		"stylefmt": "^6.0.3",
-		"stylelint": "^13.13.1",
-		"stylelint-order": "^4.1.0",
-		"stylelint-scss": "^3.19.0",
-		"webpack": "^5.37.0"
+		"postcss-sorting": "^7.0.1",
+		"prettier": "^2.6.2",
+		"sass": "^1.50.0",
+		"stylelint": "^14.6.1",
+		"stylelint-config-standard-scss": "^3.0.0",
+		"stylelint-order": "^5.0.0",
+		"stylelint-scss": "^4.2.0"
 	}
 }
