--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
 		"docs-postcss": "postcss --config build/postcss.config.js --replace \"docs/_media/*.css\" \"!docs/_media/*.min*\" \"!docs/_media/*.css.map\"",
 		"docs-fix": "stylelint --fix \"docs/_media/*.css\" \"!docs/_media/*.min.css\" \"!docs/_media/*.css.map\" --cache --cache-location .cache/.stylelintdocscache",
 		"docs-minify": "cleancss -O1 --format breakWith=lf --with-rebase --source-map --source-map-inline-sources --output docs/_media --batch --batch-suffix \".min\" \"docs/_media/*.css\" \"!docs/_media/*.min.css\" \"!docs/_media/*.css.map\"",
+		"html-fix": "js-beautify --html --replace -t -n -p -m 10 -I -b \"collapse\" -S \"normal\" -w 0 -A \"auto\" -i 1 --templating \"django\" tests/*.html",
 		"eslint": "eslint --cache --cache-location .cache/.eslintcache --report-unused-disable-directives .",
 		"scss-lint": "stylelint \"**/*.scss\" --config \".stylelintrc\" --cache --cache-location .cache/.stylelintscsscache",
 		"css": "npm-run-all --continue-on-error css-compile css-postcss css-fix css-minify",
@@ -93,6 +94,7 @@
 		"eslint": "^8.12.0",
 		"eslint-config-xo": "^0.40.0",
 		"htmlhint": "^1.1.3",
+		"js-beautify": "^1.14.2",
 		"nodemon": "^2.0.15",
 		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.12",
