add html linting and all lint commands

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -11,6 +11,7 @@
         "Git's",
         "hanakin",
         "helvetica",
+        "htmlhintrc",
         "Idan",
         "invisibles",
         "ITCSS",
