--- a/package.json
+++ b/package.json
@@ -68,10 +68,12 @@
 		"docs-fix": "stylelint --fix \"docs/_media/*.css\" \"!docs/_media/*.min.css\" \"!docs/_media/*.css.map\" --cache --cache-location .cache/.stylelintdocscache",
 		"docs-minify": "cleancss -O1 --format breakWith=lf --with-rebase --source-map --source-map-inline-sources --output docs/_media --batch --batch-suffix \".min\" \"docs/_media/*.css\" \"!docs/_media/*.min.css\" \"!docs/_media/*.css.map\"",
 		"html-fix": "js-beautify --html --replace -t -n -p -m 10 -I -b \"collapse\" -S \"normal\" -w 0 -A \"auto\" -i 1 --templating \"django\" tests/*.html",
-		"eslint": "eslint --cache --cache-location .cache/.eslintcache --report-unused-disable-directives .",
-		"scss-lint": "stylelint \"**/*.scss\" --config \".stylelintrc\" --cache --cache-location .cache/.stylelintscsscache",
+		"lint-html": "htmlhint --config .htmlhintrc tests/",
+		"lint-js": "eslint --cache --cache-location .cache/.eslintcache --report-unused-disable-directives .",
+		"lint-scss": "stylelint \"**/*.scss\" --config \".stylelintrc\" --cache --cache-location .cache/.stylelintscsscache",
 		"css": "npm-run-all --continue-on-error css-compile css-postcss css-fix css-minify",
 		"docs": "npm-run-all --continue-on-error docs-compile docs-postcss docs-fix docs-minify",
+		"lint": "npm-run-all --parallel lint-*",
 		"build": "npm-run-all --parallel css docs",
 		"watch": "npm-run-all --parallel watch-*",
 		"watch-css": "nodemon --watch src/scss/ --ext scss --exec \"npm-run-all css-compile css-postcss css-fix css-minify\"",
