--- a/.stylelintrc
+++ b/.stylelintrc
@@ -6,7 +6,7 @@
 	],
 	"ignoreFiles": [
 		"./src/scss/generic/_normalize.scss",
-		"./dist/assets/css/*.css",
+		"./dist/css/*.css",
 		"./src/scss/settings/*.scss",
 		"./docs/**.md",
 		"./docs/documentation/*.html"
